--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -238,11 +238,11 @@
                     <!--container-->
                   </div>
                   <!--modal body--->
-
+  
                   <!--modal footer-->
                   <div class="modal-footer">
 
-                    <button (click)="clearValue()" type="submit" class="btn btn-secondary" data-dismiss="modal">
+                    <button (click)="clearValue(contact)" type="submit" class="btn btn-secondary" data-dismiss="modal">
                       Close
                     </button>
 
